--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <p>
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus laborum adipisci unde laboriosam, reiciendis libero autem exercitationem magnam. Quos fugiat, quidem non quae ad omnis officia at commodi accusamus tempora, ex possimus rerum totam repudiandae labore ut distinctio, natus quaerat sint officiis quo! Et harum in nihil voluptatibus optio praesentium vero nulla deleniti consequatur? Adipisci velit perspiciatis eligendi minima pariatur expedita sunt totam laboriosam sed suscipit, assumenda fugiat esse eius? Quis, hic assumenda et ex odit temporibus illo? Debitis omnis earum nesciunt ipsum. Quos a blanditiis necessitatibus molestiae, laudantium incidunt veritatis unde, modi quis voluptas vel eum quibusdam? Quos, sunt.
   </p>
+  <img src="https://picsum.photos/100/100" alt="img" width="100" height="100">
 </body>
 </html>
